--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,7 +8,9 @@
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.0",
         "fideloper/proxy": "^4.0",
-	 "intervention/image": "^2.4",
+        "google/cloud-firestore": "^1.1",
+        "grpc/grpc": "^v1.1.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "tymon/jwt-auth": "1.0.0-rc.3"
