--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Q-Blog
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -13,7 +13,7 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -30,9 +30,9 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1
+PUSHER_APP_KEY=468adb0d5808c1
+PUSHER_APP_SECRET=1Y9oBmSyQ3viI3lTPOkdXzdKDM44L2pXsyddJyw99FX8jXaWXG
 PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
