--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,11 +7,10 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.0",
+        "beyondcode/laravel-websockets": "^1.1",
         "fideloper/proxy": "^4.0",
-        "google/cloud-firestore": "^1.1",
-        "grpc/grpc": "^v1.1.0",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "tymon/jwt-auth": "1.0.0-rc.3"
     },
