use laravel-echo instead of firestore

--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -16,17 +16,17 @@
     "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.18",
     "bootstrap": "^4.0.0",
-    "firebase": "^5.8.3",
     "jodit-vue": "^1.2.3",
     "jquery": "^3.2",
+    "laravel-echo": "^1.5.3",
     "lodash": "^4.17.4",
     "popper.js": "^1.12",
+    "pusher-js": "^4.4.0",
     "vue": "^2.5.21",
     "vue-2-breadcrumbs": "^0.3.1",
     "vue-axios": "^2.1.2",
     "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
-    "vuefire": "^2.0.0-alpha.20",
     "vuejs-paginate": "^2.0.0",
     "vuex": "^3.0.1"
   },
